Add styles to projects page

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,16 @@
     "no-undef": "off",
     "no-unused-vars": "off",
     "comma-dangle": "off",
-    "keyword-spacing": "off"
+    "keyword-spacing": "off",
+    "jsx-a11y/label-has-associated-control": [ "error", {
+      "required": {
+        "some": [ "nesting", "id"  ]
+      }
+    }],
+    "jsx-a11y/label-has-for": [ "error", {
+      "required": {
+        "some": [ "nesting", "id"  ]
+      }
+    }]
   }
 }
