--- a/package.json
+++ b/package.json
@@ -13,21 +13,24 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://josephrexme@bitbucket.org/strichllc/frontend-web.git"
+    "url": "git+https://github.com/ChidinmaKO/Cocoa-Cacoo.git"
   },
   "author": "Chidinma Kalu",
-  "license": "ISC",
-  "homepage": "https://bitbucket.org/strichllc/frontend-web#readme",
+  "license": "MIT",
+  "homepage": "https://github.com/ChidinmaKO/Cocoa-Cacoo#readme",
   "dependencies": {
     "axios": "^0.18.0",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
+    "griz": "^1.3.1",
     "helmet": "^3.15.0",
+    "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-pose": "^4.0.2",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "styled-components": "^4.1.1",
     "webpack": "^4.26.0",
     "webpack-dev-middleware": "^3.4.0",
     "webpack-hot-middleware": "^2.24.3"
