--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "postinstall": "npm run prod",
     "start": "node src/server.js",
     "dev": "webpack-dev-server",
-    "test": "NODE_ENV=test jest tests",
+    "test": "NODE_ENV=test jest --notify tests",
     "build": "webpack",
     "prod": "NODE_ENV=production webpack"
   },
@@ -42,7 +42,9 @@
     "@babel/preset-env": "^7.1.6",
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime": "^7.1.5",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
+    "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
@@ -57,6 +59,8 @@
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-template": "^6.2.0",
     "image-webpack-loader": "^4.5.0",
+    "jest": "^23.6.0",
+    "regenerator-runtime": "^0.13.1",
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^1.2.4",
     "url-loader": "^1.1.2",
